fix breadcrumb, second and third nav
* fixed the nesting of the lists
* used white-space, vertical-align and widths to make lists stay together

[test of long nav 1](http://0.0.0.0:8001/about/about-ubuntu/our-philosophy)
[test of long nav 2](http://0.0.0.0:8001/legal/terms-and-policies/privacy-policy)

* Fixes #1954 - Breadcrumbs misaligned on small screen on ubuntu chrome
* Fixes #1931 - Breadcrumbs broken in S screen (live)
* Fixes #1765 - Make sure 2nd level item with children is correctly aligned

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -99,6 +99,7 @@
 
     @media (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
       border-top: 1px solid $color-mid-light;
+      white-space: nowrap;
     }
 
     &__row {
@@ -172,6 +173,7 @@
 
       @media (min-width: $breakpoint-medium) {
         margin-left: $sp-large;
+        vertical-align: top;
       }
     }
 
@@ -189,6 +191,7 @@
       background: $color-light;
       border-bottom: 1px solid $color-mid-light;
       padding: $sp-x-small 0 $sp-small;
+      white-space: nowrap;
 
       .p-breadcrumbs__item {
         margin-bottom: 0;
@@ -314,6 +317,8 @@
   }
 
   .nav-tertiary__menu {
+    white-space: normal;
+    width: 90%;
 
     .p-inline-list__item {
       font-size: .875rem;
@@ -321,7 +326,7 @@
 
     @media (max-width: $breakpoint-medium - 1) {
       .p-inline-list__item {
-        padding: 0 $sp-x-small;
+        padding: 0 $sp-x-small 0 0;
       }
     }
 
